<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/map_settings"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_mapsettings">
        <menu>
            <item
                android:id="@+id/menu_mapa_normal"
                android:title="@string/menu_mapa_normal"/>
            <item
                android:id="@+id/menu_mapa_hybrid"
                android:title="@string/menu_mapa_hybrid"/>
            <item
                android:id="@+id/menu_mapa_sattelite"
                android:title="@string/menu_mapa_sattelite"/>
            <item
                android:id="@+id/menu_mapa_terrain"
                android:title="@string/menu_mapa_terrain"/>
            <item
                android:id="@+id/menu_mapa_none"
                android:title="@string/menu_mapa_none"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_new"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="always"
        android:title="@string/menu_loc">
        <menu>
            <item
                android:id="@+id/cel1"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_cel1"/>
            <item
                android:id="@+id/cel2"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_cel2"/>
            <item
                android:id="@+id/cel3"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_cel3"/>
        </menu>
    </item>
    <item
        android:id="@+id/historial"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="always"
        android:title="@string/historial">
        <menu>
            <item
                android:id="@+id/cel11"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_cel1"/>
            <item
                android:id="@+id/cel22"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_cel2"/>
            <item
                android:id="@+id/cel33"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_cel3"/>
        </menu>
    </item>
    <item
        android:id="@+id/tools"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="always"
        android:title="@string/menu_tools">
        <menu>
            <item
                android:id="@+id/medir"
                android:checkable="true"
                android:checked="false"
                android:icon="@android:drawable/ic_menu_crop"
                android:title="@string/menu_medir"/>
            <item
                android:id="@+id/clear"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/menu_clear"/>
            <item
                android:id="@+id/WayPoint"
                android:checkable="true"
                android:checked="false"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/menu_waypoint"/>
        </menu>
    </item>

</menu>